# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# This is the name you use for `pip install`
name = "linescan"
version = "0.1.0"
authors = [
  { name="Christoph Langer", email="cchlanger@gmail.com" },
]
description = "A tool for performing linescan analysis on microscopy images."
readme = "README.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Analysis",
]

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
    "seaborn",
    "pandas",
    "lmfit",
]

[project.urls]
"Homepage" = "https://github.com/gerlichlab/linescan"
"Bug Tracker" = "https://github.com/gerlichlab/linescan/issues"